# pingme

./: .gitignore  Cargo.toml  Dockerfile  readme.md
assets/: style.css
configuration/: base.yml  local.yml
src/: lib.rs  main.rs  settings.rs  startup.rs
src/routes/: healthcheck.rs  mod.rs  ping.rs
src/templates/: has_internet.html  has_not_internet.html  ping.html
